--- a/assets/css/sass/_contact.sass
+++ b/assets/css/sass/_contact.sass
@@ -22,7 +22,7 @@
     text-align: center
     text-transform: uppercase
     font-size: 1.2rem
-    color: $white
+    color: $dark
     &::before,
     &::after
       content: " — "
