--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,6 +68,7 @@ layout: default
     </div>
   </section> <!-- End Section Author -->
 
+  <!--
   <section class="recent_box">
     <div class="post_wrapper">
       <h2 class="recent_title">Recent post</h2>
@@ -83,7 +84,8 @@ layout: default
         {% endfor %}
       </div>
     </div>
-  </section> <!-- End Section Recent Box -->
+  </section>  
+  -->
   
   {% include disqus.html %}
   
