--- a/assets/css/sass/parts/_cards.sass
+++ b/assets/css/sass/parts/_cards.sass
@@ -24,7 +24,7 @@
     bottom: 10%
     .chapter_number, .chapter_title
       color: $white
-      text-shadow: 2px 2px 4px #000000;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     .chapter_number
       font-size: 0.9rem
       text-transform: uppercase
