Se sube archivo _shadow.scss y se usa en _cards.sass.

--- a/assets/css/sass/main.sass
+++ b/assets/css/sass/main.sass
@@ -2,6 +2,7 @@
 @import 'tools/animate'
 @import 'syntax'
 @import 'variables'
+@import 'shadow'
 
 // - - - - - - - - - - Main Styles - - - - - - - - - - //
 
