--- a/assets/css/sass/parts/_cards.sass
+++ b/assets/css/sass/parts/_cards.sass
@@ -24,7 +24,12 @@
     bottom: 10%
     .chapter_number, .chapter_title
       color: $white
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      text-shadow: text-shadow(
+        $color: #ccc,
+        $stepX: -.5px,
+        $stepY: .5px,
+        $count: 50
+      )
     .chapter_number
       font-size: 0.9rem
       text-transform: uppercase
