Se elimina archivo _shadow.scss y se usa en _cards.sass.

--- a/assets/css/sass/parts/_cards.sass
+++ b/assets/css/sass/parts/_cards.sass
@@ -23,13 +23,7 @@
     left: 2.5%
     bottom: 10%
     .chapter_number, .chapter_title
-      color: $white
-      text-shadow: text-shadow(
-        $color: #ccc,
-        $stepX: -.5px,
-        $stepY: .5px,
-        $count: 50
-      )
+      color: $text-color
     .chapter_number
       font-size: 0.9rem
       text-transform: uppercase
